--- a/src/App.css
+++ b/src/App.css
@@ -178,4 +178,9 @@ body {
     background: #fff;
     border-bottom: 1px solid #edf2f6;
   }
+  .admin-main-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
