--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
 }
 
-#admin-side-nav { 
+#admin-side-nav {
   width: 100%;
   height: 50px;
   background: #1e1e2c;
@@ -256,5 +256,9 @@ p.adminSummaryTitle {
     font-size: 0.8rem;
     font-weight: 500;
     color: #595d6e;
+  }
+  p.adminSummaryCount {
+    font-size: 0.9rem;
+    color: #74788d;
   }
 }
